fix: Fix debtPositionType patch operation